# ensemble

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-tests  README.md  pyproject.toml  run_server.py
.github/workflows/: pylint.yml
docs/: api.md  domain-model.md
docs/adr/: 001-recording-separate-from-session.md  002-session-multiple-pieces.md  003-session-aggregate-boundary.md
docs/content/chapters/: chp_1.md
docs/diagram/: c4_container.mmd  c4_context.mmd  c4_story_components.mmd  flow_load_section.mmd  flow_unlock_story.mmd
docs/diagrams/: aggregate-boundary-diagram.md  entity-relationships.md
src/application/: unlock_story_use_case.py
src/application/use_cases/: start_session.py  stop_session.py
src/domain/entities/: practice_session.py
src/domain/entities/story/: musical_spirit.py
src/domain/exceptions/: domain_exceptions.py
src/domain/story/: section.py  section_repository.py  story_fragment.py  technical_goal.py  unlock_conditions.py  unlock_result.py
src/domain/value_objects/: session_state.py
src/domain/value_objects/story/: identifiers.py  performance.py  (+3 more)
src/infrastructure/database/: connection.py  models.py
src/infrastructure/repositories/: sqlalchemy_section_repository.py
src/presentation/: dependencies.py  main.py
src/presentation/api/: sections.py
src/presentation/schemas/: section.py
tests/integration/infrastructure/: test_section_repository.py
tests/unit/application/: test_unlock_story_use_case.py
tests/unit/domain/: test_pitch.py  test_section.py  test_unlock_conditions.py  test_unlock_result.py
(+7 files in other folders)
