[project]
name = "ensemble"
version = "0.1.0"
description = "Cello practice companion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.2",
    "librosa>=0.10.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.104.0",
    "httpx>=0.24.0",
    "uvicorn>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pylint>=2.16.2",
    "black>=24.1.0",
    "isort>=5.13.2",
    "autoflake>=2.2.1",
]
